# rust-dcg-codec

./: Cargo.toml  README.md
src/: codec.rs  main.rs
src/codec/: decode.rs
tests/: decode.rs
